# llm-localization

./: .gitignore  README.md  constants.py  flutter_l10n  flutter_localize.py  package-lock.json  pyproject.toml  requirements.txt
test_inputs/: app_en.arb  app_es.arb
