[tool.poetry]
name = "llm-localization"
version = "0.1.0"
description = "Localization automation for Flutter framework."
authors = ["Weitian Wang <weitianwang624@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.4"
openai = "^1.36.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
